kubernetes/clusters/live/config/tandoor/external-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tandoor-external
  namespace: tandoor
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Tandoor"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/icon: "tandoor.svg"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=tandoor"
spec:
  parentRefs:
    - name: external
      namespace: istio-gateway
  hostnames:
    - "recipes.${external_domain}"
  rules:
    - backendRefs:
        - name: tandoor
          port: 8080
