kubernetes/clusters/live/config/tandoor/internal-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tandoor-internal
  namespace: tandoor
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "recipes.${internal_domain}"
  rules:
    - backendRefs:
        - name: tandoor
          port: 8080
